# xml5

./: Cargo.toml  LICENSE-MIT.md
src/: encoding.rs  errors.rs  events.rs  lib.rs
src/tokenizer/: decoding.rs  emitter.rs  encoding.rs  machine.rs  mod.rs  reader.rs  tokenizer.rs
tests/: test.rs
